fixed overlap rectangle box

--- a/article1-thats-entertainment/style.css
+++ b/article1-thats-entertainment/style.css
@@ -131,8 +131,8 @@ p{
 }
 .quote-container::before{
 	content: '';
-	width: 75%;
-	height: 77%;
+	width: 300px;
+	height: 200px;
 	/* top:30px;
 	left:50px; */
 	position:absolute;
@@ -143,8 +143,8 @@ p{
 }
 .quote-container::after{
 	content: '';
-	width: 75%;
-	height: 79%;
+	width: 300px;
+	height: 200px;
 	/* top: 30px;
 	left: 50px; */
 	position:absolute;
